--- a/style.css
+++ b/style.css
@@ -10,8 +10,21 @@ body {
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 200%;
     position: relative;
+    animation: bgAnimation 120s infinite;
+}
+
+@keyframes bgAnimation {
+    0%{
+        background-position: top center;
+    }
+    50%{
+        background-position: bottom center;
+    }
+    100%{
+        background-position: top center;
+    }
 }
 
 .bg-layer{
@@ -35,36 +48,16 @@ body {
     position: relative;
 }
 
-.clock .horizintal {
-    position: absolute;
-    top: 50%;
-    left: 7.5%;
-    transform: translate(0, -50%);
-    height: 40px;
-    width: 85%;
-    background-image: linear-gradient(
-        180deg,
-        rgba(255, 255, 255, 0),
-        rgba(255, 255, 255, 0.8),
-        rgba(255, 255, 255, 0)
-    );
-    z-index: -1;
-    border-radius: 10px;
-}
-
-
 .separator {
-    color: rgb(0, 0, 0);
+    color: white;
     font-size: 2rem;
     padding: 0 5px;
 }
 
 .digit {
-    width: 40px;
+    width: 50px;
     height: 600px;
-    /* Show entire strip (10 * 60px) */
     overflow: visible;
-    /* <-- KEY: Allow parts above/below to be visible */
     position: relative;
     border-radius: 10px;
 }
@@ -74,15 +67,7 @@ body {
     display: flex;
     flex-direction: column;
     transition: transform 0.5s ease-in-out;
-    background-color: rgba(255, 255, 255, 0.2);
-    color: rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(10px);
-    border-radius: 20px;
-    border-top: 0.5px solid rgba(255, 255, 255, 0.8);
-    border-left: 0.5px solid rgba(255, 255, 255, 0.8);
-    border-right: 0.5px solid rgba(255, 255, 255, 0.2);
-    border-bottom: 0.5px solid rgba(255, 255, 255, 0.2);
-    /* opacity: 0.5; */
+    padding: 10px;
 }
 
 .strip span {
@@ -90,4 +75,90 @@ body {
     line-height: 60px;
     font-size: 2rem;
     text-align: center;
+    z-index: 1;
+}
+
+
+.lg-wrapper {
+  position: relative;
+  display: flex;
+  overflow: hidden;
+  color: white;
+  box-shadow: 0 6px 6px rgba(0, 0, 0, 0.2), 0 0 20px rgba(0, 0, 0, 0.1);
+}
+
+.lg-effect {
+  position: absolute;
+  z-index: 0;
+  inset: 0;
+
+  backdrop-filter: blur(1px);
+  filter: url(#glass-distortion);
+  overflow: hidden;
+  isolation: isolate;
+}
+
+.lg-tint {
+  z-index: 1;
+  position: absolute;
+  inset: 0;
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.lg-shine {
+  position: absolute;
+  inset: 0;
+  z-index: 2;
+
+  overflow: hidden;
+
+  box-shadow: inset 0.5px 3px 2px 0 rgba(255, 255, 255, 0.5),
+    inset -0.5px -1px 2px 0px rgba(255, 255, 255, 0.5);
+}
+
+.lg-text {
+  z-index: 3;
+  font-size: 2rem;
+}
+
+a {
+  text-decoration: none;
+}
+
+.wrapper {
+  display: flex;
+  gap: 25px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.menu,
+.menu > div {
+  padding: 0.4rem;
+  border-radius: 1.8rem;
+}
+
+.menu > div > div {
+  font-size: 20px;
+  color: white;
+  padding: 0.4rem 0.6rem;
+  border-radius: 0.8rem;
+  transition: all 0.1s ease-in;
+}
+
+.menu > div > div:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: inset -2px -2px 2px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(2px);
+}
+
+
+@keyframes moveBackground {
+  from {
+    background-position: 0% 0%;
+  }
+  to {
+    background-position: 0% -1500%;
+  }
 }
